--- a/index.html
+++ b/index.html
@@ -113,6 +113,36 @@
         font-weight: 600;
       }
 
+      .test-controls {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+      }
+
+      .test-controls button {
+        flex: 1 1 120px;
+        border: none;
+        border-radius: 14px;
+        padding: 12px 14px;
+        background: #1a1d21;
+        color: #ffffff;
+        font-weight: 600;
+        font-size: 14px;
+        cursor: pointer;
+        transition: transform 150ms ease, box-shadow 150ms ease;
+        box-shadow: 0 10px 18px rgba(20, 28, 38, 0.24);
+      }
+
+      .test-controls button:active {
+        transform: scale(0.97);
+      }
+
+      .test-controls button:disabled {
+        cursor: not-allowed;
+        opacity: 0.45;
+        box-shadow: none;
+      }
+
       @media (hover: hover) {
         a {
           color: inherit;
@@ -143,6 +173,12 @@
           data-pointer
         />
       </section>
+
+      <div class="test-controls" role="group" aria-label="Test locations">
+        <button type="button" data-test-location="trailhead">Trailhead</button>
+        <button type="button" data-test-location="creekbend">Creek Bend</button>
+        <button type="button" data-test-location="ridgepoint">Ridge Point</button>
+      </div>
 
       <div class="location-label">
         <div>
@@ -176,26 +212,51 @@
         };
 
         const fallbackKey = "trailhead";
-        const params = new URLSearchParams(window.location.search);
-        const requestedKey = (params.get("loc") || "").toLowerCase().trim();
-        const location = LOCATIONS[requestedKey] || LOCATIONS[fallbackKey];
-
         const pointer = document.querySelector("[data-pointer]");
         const label = document.querySelector("[data-location-label]");
         const fallbackChip = document.querySelector("[data-fallback-chip]");
+        const testButtons = document.querySelectorAll("[data-test-location]");
+        const params = new URLSearchParams(window.location.search);
+        const requestedKey = (params.get("loc") || "").toLowerCase().trim();
+        const hasRequested = requestedKey !== "";
+        const isValidKey = Boolean(LOCATIONS[requestedKey]);
+        const activeKey = isValidKey ? requestedKey : fallbackKey;
+
+        function renderLocation(key) {
+          const target = LOCATIONS[key] || LOCATIONS[fallbackKey];
+          pointer.style.top = target.top + "%";
+          pointer.style.left = target.left + "%";
+          label.textContent = target.label;
+        }
 
         if (!pointer || !label) {
           return;
         }
 
-        pointer.style.top = location.top + "%";
-        pointer.style.left = location.left + "%";
-        label.textContent = location.label;
+        renderLocation(activeKey);
 
-        const isFallback = !LOCATIONS[requestedKey] && requestedKey !== "";
-        if (isFallback && fallbackChip) {
+        if (!isValidKey && hasRequested && fallbackChip) {
           fallbackChip.hidden = false;
         }
+
+        testButtons.forEach((button) => {
+          const key = button.dataset.testLocation;
+          if (!LOCATIONS[key]) {
+            button.disabled = true;
+            return;
+          }
+
+          button.addEventListener("click", () => {
+            renderLocation(key);
+            if (fallbackChip) {
+              fallbackChip.hidden = true;
+            }
+
+            const updatedUrl = new URL(window.location.href);
+            updatedUrl.searchParams.set("loc", key);
+            window.history.replaceState(null, "", updatedUrl.toString());
+          });
+        });
       })();
     </script>
   </body>
