--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         position: absolute;
         width: clamp(64px, 18vw, 90px);
         max-width: 120px;
-        transform: translate(-50%, -90%);
+        transform: translate(-50%, -90%) rotate(var(--pointer-rotation, 0deg));
         transition: top 300ms ease, left 300ms ease;
         filter: drop-shadow(0 8px 18px rgba(0, 0, 0, 0.22));
+        transform-origin: 50% 80%;
       }
 
       .location-label {
@@ -119,7 +120,8 @@
         gap: 10px;
       }
 
-      .test-controls button {
+      .test-controls button,
+      .compass-controls button {
         flex: 1 1 120px;
         border: none;
         border-radius: 14px;
@@ -133,14 +135,28 @@
         box-shadow: 0 10px 18px rgba(20, 28, 38, 0.24);
       }
 
-      .test-controls button:active {
+      .test-controls button:active,
+      .compass-controls button:active {
         transform: scale(0.97);
       }
 
-      .test-controls button:disabled {
+      .test-controls button:disabled,
+      .compass-controls button:disabled {
         cursor: not-allowed;
         opacity: 0.45;
         box-shadow: none;
+      }
+
+      .compass-controls {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+
+      .compass-status {
+        font-size: 13px;
+        color: var(--muted);
+        flex: 1 1 auto;
       }
 
       @media (hover: hover) {
@@ -180,6 +196,13 @@
         <button type="button" data-test-location="ridgepoint">Ridge Point</button>
       </div>
 
+      <div class="compass-controls">
+        <button type="button" data-enable-compass>Enable Compass</button>
+        <div class="compass-status" data-compass-status>
+          Pointer rotation follows your device heading once enabled.
+        </div>
+      </div>
+
       <div class="location-label">
         <div>
           <span>You're near</span>
@@ -216,6 +239,8 @@
         const label = document.querySelector("[data-location-label]");
         const fallbackChip = document.querySelector("[data-fallback-chip]");
         const testButtons = document.querySelectorAll("[data-test-location]");
+        const compassButton = document.querySelector("[data-enable-compass]");
+        const compassStatus = document.querySelector("[data-compass-status]");
         const params = new URLSearchParams(window.location.search);
         const requestedKey = (params.get("loc") || "").toLowerCase().trim();
         const hasRequested = requestedKey !== "";
@@ -257,6 +282,76 @@
             window.history.replaceState(null, "", updatedUrl.toString());
           });
         });
+
+        function updateCompassStatus(message) {
+          if (compassStatus) {
+            compassStatus.textContent = message;
+          }
+        }
+
+        function enableCompass() {
+          if (!window.DeviceOrientationEvent) {
+            updateCompassStatus("Compass not supported on this device.");
+            compassButton.disabled = true;
+            return;
+          }
+
+          const activate = () => {
+            window.addEventListener(
+              "deviceorientation",
+              (event) => {
+                let heading;
+                if (typeof event.webkitCompassHeading === "number") {
+                  heading = event.webkitCompassHeading;
+                } else if (event.absolute && typeof event.alpha === "number") {
+                  heading = 360 - event.alpha;
+                } else if (typeof event.alpha === "number") {
+                  heading = 360 - event.alpha;
+                }
+
+                if (typeof heading === "number" && !Number.isNaN(heading)) {
+                  const normalized = ((heading % 360) + 360) % 360;
+                  pointer.style.setProperty(
+                    "--pointer-rotation",
+                    normalized.toFixed(1) + "deg"
+                  );
+                  updateCompassStatus(
+                    "Pointer aligned. Heading: " + normalized.toFixed(0) + "°"
+                  );
+                } else {
+                  updateCompassStatus("Compass active, but heading unavailable.");
+                }
+              },
+              true
+            );
+
+            compassButton.disabled = true;
+            updateCompassStatus("Compass enabled. Rotate your device to test.");
+          };
+
+          if (
+            typeof DeviceOrientationEvent !== "undefined" &&
+            typeof DeviceOrientationEvent.requestPermission === "function"
+          ) {
+            DeviceOrientationEvent.requestPermission()
+              .then((response) => {
+                if (response === "granted") {
+                  activate();
+                } else {
+                  updateCompassStatus("Permission denied. Enable motion access.");
+                }
+              })
+              .catch(() => {
+                updateCompassStatus("Permission request failed. Try again.");
+              });
+          } else {
+            activate();
+          }
+        }
+
+        if (compassButton) {
+          compassButton.addEventListener("click", enableCompass);
+        }
       })();
     </script>
   </body>
